[tool.poetry]
name = "alsbts-core"
version = "0.4.0"
description = "stream based active learning"
authors = ["bela127 <bhb127@outlook.de>"]
license = "MIT"
packages = [
    { include = "alsbts/core", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
alts-core = { path = "/home/bela/Cloud/code/Git/alts-core", develop = true }
#alts-core = {git = "https://github.com/bela127/alts-core.git"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
